doing the userChoice and compChoice

--- a/index.html
+++ b/index.html
@@ -23,19 +23,18 @@
 
         <div class="choices">
             <div class="choice">
-                <img src="images/rock.png" alt="Rock image." id="rock">
+                <img src="images/rock.png" alt="Rock image." id="r">
             </div>
             <div class="choice">
-                <img src="images/paper.png" alt="Paper image." id="paper">
+                <img src="images/paper.png" alt="Paper image." id="p">
             </div>
             <div class="choice">
-                <img src="images/scissors.png" alt="Scissor image." id="scissor">
+                <img src="images/scissors.png" alt="Scissor image." id="s">
             </div>
         </div>
 
-        <p id="action-message">Make your move.</p>
+        <p id="action-msg">Make your move.</p>
         
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="app.js"></script>
 
     </body>
