--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <div class="score-board">
             <div class="badge" id="user-label">user</div>
             <div class="badge" id="comp-label">comp</div>
-            <span id="user-score">0:</span><span id="comp-score">0</span>          
+            <span id="user-score">0</span><span>:</span><span id="comp-score">0</span>          
         </div>
 
         <div class="result">
-            <p class="resultP"></p>
+            <p></p>
         </div>
 
         <div class="choices">
@@ -29,7 +29,7 @@
                 <img src="images/paper.png" alt="Paper image." id="p">
             </div>
             <div class="choice">
-                <img src="images/scissors.png" alt="Scissor image." id="s">
+                <img src="images/scissor.png" alt="Scissor image." id="s">
             </div>
         </div>
 
