--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Rock Paper Scissors</title>
+        <title>Rock Paper Scissor</title>
         <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
         <header>
-            <h1>Rock Paper Scissors</h1>
+            <h1>Rock Paper Scissor</h1>
         </header>
 
         <div class="score-board">
